Bug: Horizontal Scrolling Fixed

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -9,6 +9,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
   
 }
 ::-webkit-scrollbar {
@@ -21,7 +24,7 @@ body {
   background: #ffffff10;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
 }
 /* linear-gradient(to left, #09bd78, hsl(351, 83%, 61%)); */
 
